--- a/iOS/Schedule/Notifier Extension/Info.plist
+++ b/iOS/Schedule/Notifier Extension/Info.plist
@@ -43,7 +43,7 @@
 		<string>com.apple.watchkit</string>
 	</dict>
 	<key>RemoteInterfacePrincipalClass</key>
-	<string>InterfaceController</string>
+	<string>DFCInterfaceController</string>
 	<key>WKExtensionDelegateClassName</key>
 	<string>ExtensionDelegate</string>
 </dict>
